--- a/Day - 7.ipynb
+++ b/Day - 7.ipynb
@@ -51,7 +51,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Statistical Functions"
    ]
@@ -205,7 +207,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Regular Expressions\n",
     "\n",
@@ -584,7 +588,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### From PDF"
    ]
@@ -848,6 +854,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### From Image"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "###### Ex. Image to text"
    ]
   },
@@ -899,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -921,25 +934,350 @@
    ],
    "source": [
     "from easyocr import Reader\n",
+    "import pandas as pd\n",
     "\n",
     "reader = Reader(['en'])\n",
-    "text = reader.readtext(\"data.png\", detail=0)\n",
+    "text = reader.readtext(\"./Datasets/data.png\", detail=0)\n",
     "print(text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>COID</th>\n",
+       "      <th>CoName</th>\n",
+       "      <th>Ticker</th>\n",
+       "      <th>PeriodName</th>\n",
+       "      <th>PeriodEndDate</th>\n",
+       "      <th>FirstFillingDate</th>\n",
+       "      <th>LatestFillingDate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1068</td>\n",
+       "      <td>Meta Platforms, Inc_</td>\n",
+       "      <td>META</td>\n",
+       "      <td>Q1 07</td>\n",
+       "      <td>31-03-2007</td>\n",
+       "      <td>15-04-2007</td>\n",
+       "      <td>15-04-2007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1068</td>\n",
+       "      <td>Meta Platforms, Inc.</td>\n",
+       "      <td>META</td>\n",
+       "      <td>Q2 07</td>\n",
+       "      <td>30-06-2007</td>\n",
+       "      <td>15-07-2007</td>\n",
+       "      <td>15-07-2007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1068</td>\n",
+       "      <td>Meta Platforms, Inc_</td>\n",
+       "      <td>META</td>\n",
+       "      <td>Q3 07</td>\n",
+       "      <td>30-09-2007</td>\n",
+       "      <td>15-10-2007</td>\n",
+       "      <td>15-10-2007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1068</td>\n",
+       "      <td>Meta Platforms, Inc.</td>\n",
+       "      <td>META</td>\n",
+       "      <td>Q4 07</td>\n",
+       "      <td>31-12-2007</td>\n",
+       "      <td>15-01-2008</td>\n",
+       "      <td>15-01-2008</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1068</td>\n",
+       "      <td>Meta Platforms, Inc_</td>\n",
+       "      <td>META</td>\n",
+       "      <td>FY 07</td>\n",
+       "      <td>31-12-2007</td>\n",
+       "      <td>15-01-2008</td>\n",
+       "      <td>15-01-2008</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1068</td>\n",
+       "      <td>Meta Platforms, Inc.</td>\n",
+       "      <td>META</td>\n",
+       "      <td>Q1 08</td>\n",
+       "      <td>31-03-2008</td>\n",
+       "      <td>15-04-2008</td>\n",
+       "      <td>15-04-2008</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1068</td>\n",
+       "      <td>Meta Platforms, Inc_</td>\n",
+       "      <td>META</td>\n",
+       "      <td>Q2 08</td>\n",
+       "      <td>30-06-2008</td>\n",
+       "      <td>15-07-2008</td>\n",
+       "      <td>15-07-2008</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1068</td>\n",
+       "      <td>Meta Platforms, Inc_</td>\n",
+       "      <td>META</td>\n",
+       "      <td>Q3 08</td>\n",
+       "      <td>30-09-2008</td>\n",
+       "      <td>15-10-2008</td>\n",
+       "      <td>15-10-2008</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1068</td>\n",
+       "      <td>Meta Platforms, Inc_</td>\n",
+       "      <td>META</td>\n",
+       "      <td>Q4 08</td>\n",
+       "      <td>31-12-2008</td>\n",
+       "      <td>15-01-2009</td>\n",
+       "      <td>15-01-2009</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1068</td>\n",
+       "      <td>Meta Platforms, Inc.</td>\n",
+       "      <td>META</td>\n",
+       "      <td>FY 08</td>\n",
+       "      <td>31-12-2008</td>\n",
+       "      <td>15-01-2009</td>\n",
+       "      <td>15-01-2009</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>1068</td>\n",
+       "      <td>Meta Platforms, Inc_</td>\n",
+       "      <td>META</td>\n",
+       "      <td>Q1 09</td>\n",
+       "      <td>31-03-2009</td>\n",
+       "      <td>15-04-2009</td>\n",
+       "      <td>15-04-2009</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>1068</td>\n",
+       "      <td>Meta Platforms, Inc_</td>\n",
+       "      <td>META</td>\n",
+       "      <td>Q2 09</td>\n",
+       "      <td>30-06-2009</td>\n",
+       "      <td>15-07-2009</td>\n",
+       "      <td>15-07-2009</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>1068</td>\n",
+       "      <td>Meta Platforms, Inc_</td>\n",
+       "      <td>META</td>\n",
+       "      <td>Q3 09</td>\n",
+       "      <td>30-09-2009</td>\n",
+       "      <td>15-10-2009</td>\n",
+       "      <td>15-10-2009</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>1068</td>\n",
+       "      <td>Meta Platforms, Inc.</td>\n",
+       "      <td>META</td>\n",
+       "      <td>Q4 09</td>\n",
+       "      <td>31-12-2009</td>\n",
+       "      <td>15-01-2010</td>\n",
+       "      <td>15-01-2010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>1068</td>\n",
+       "      <td>Meta Platforms, Inc_</td>\n",
+       "      <td>META</td>\n",
+       "      <td>FY 09</td>\n",
+       "      <td>31-12-2009</td>\n",
+       "      <td>15-01-2010</td>\n",
+       "      <td>15-01-2010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>1068</td>\n",
+       "      <td>Meta Platforms, Inc_</td>\n",
+       "      <td>META</td>\n",
+       "      <td>Q1 10</td>\n",
+       "      <td>31-03-2010</td>\n",
+       "      <td>15-04-2010</td>\n",
+       "      <td>15-04-2010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>1068</td>\n",
+       "      <td>Meta Platforms, Inc_</td>\n",
+       "      <td>META</td>\n",
+       "      <td>Q2 10</td>\n",
+       "      <td>30-06-2010</td>\n",
+       "      <td>15-07-2010</td>\n",
+       "      <td>15-07-2010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>1068</td>\n",
+       "      <td>Meta Platforms, Inc.</td>\n",
+       "      <td>META</td>\n",
+       "      <td>Q3 10</td>\n",
+       "      <td>30-09-2010</td>\n",
+       "      <td>15-10-2010</td>\n",
+       "      <td>15-10-2010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>1068</td>\n",
+       "      <td>Meta Platforms, Inc_</td>\n",
+       "      <td>META</td>\n",
+       "      <td>Q4 10</td>\n",
+       "      <td>31-12-2010</td>\n",
+       "      <td>15-01-2011</td>\n",
+       "      <td>15-01-2011</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>1068</td>\n",
+       "      <td>Meta Platforms, Inc.</td>\n",
+       "      <td>META</td>\n",
+       "      <td>FY 10</td>\n",
+       "      <td>31-12-2010</td>\n",
+       "      <td>15-01-2011</td>\n",
+       "      <td>01-02-2013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>1068</td>\n",
+       "      <td>Meta Platforms, Inc.</td>\n",
+       "      <td>META</td>\n",
+       "      <td>Q111</td>\n",
+       "      <td>31-03-2011</td>\n",
+       "      <td>15-04-2011</td>\n",
+       "      <td>15-04-2011</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>1068</td>\n",
+       "      <td>Meta Platforms, Inc.</td>\n",
+       "      <td>META</td>\n",
+       "      <td>Q2 11</td>\n",
+       "      <td>30-06-2011</td>\n",
+       "      <td>15-07-2011</td>\n",
+       "      <td>15-07-2011</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>1068</td>\n",
+       "      <td>Meta Platforms, Inc.</td>\n",
+       "      <td>META</td>\n",
+       "      <td>03 11</td>\n",
+       "      <td>30-09-2011</td>\n",
+       "      <td>15-10-2011</td>\n",
+       "      <td>15-10-201</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    COID                CoName Ticker PeriodName PeriodEndDate  \\\n",
+       "0   1068  Meta Platforms, Inc_   META      Q1 07    31-03-2007   \n",
+       "1   1068  Meta Platforms, Inc.   META      Q2 07    30-06-2007   \n",
+       "2   1068  Meta Platforms, Inc_   META      Q3 07    30-09-2007   \n",
+       "3   1068  Meta Platforms, Inc.   META      Q4 07    31-12-2007   \n",
+       "4   1068  Meta Platforms, Inc_   META      FY 07    31-12-2007   \n",
+       "5   1068  Meta Platforms, Inc.   META      Q1 08    31-03-2008   \n",
+       "6   1068  Meta Platforms, Inc_   META      Q2 08    30-06-2008   \n",
+       "7   1068  Meta Platforms, Inc_   META      Q3 08    30-09-2008   \n",
+       "8   1068  Meta Platforms, Inc_   META      Q4 08    31-12-2008   \n",
+       "9   1068  Meta Platforms, Inc.   META      FY 08    31-12-2008   \n",
+       "10  1068  Meta Platforms, Inc_   META      Q1 09    31-03-2009   \n",
+       "11  1068  Meta Platforms, Inc_   META      Q2 09    30-06-2009   \n",
+       "12  1068  Meta Platforms, Inc_   META      Q3 09    30-09-2009   \n",
+       "13  1068  Meta Platforms, Inc.   META      Q4 09    31-12-2009   \n",
+       "14  1068  Meta Platforms, Inc_   META      FY 09    31-12-2009   \n",
+       "15  1068  Meta Platforms, Inc_   META      Q1 10    31-03-2010   \n",
+       "16  1068  Meta Platforms, Inc_   META      Q2 10    30-06-2010   \n",
+       "17  1068  Meta Platforms, Inc.   META      Q3 10    30-09-2010   \n",
+       "18  1068  Meta Platforms, Inc_   META      Q4 10    31-12-2010   \n",
+       "19  1068  Meta Platforms, Inc.   META      FY 10    31-12-2010   \n",
+       "20  1068  Meta Platforms, Inc.   META       Q111    31-03-2011   \n",
+       "21  1068  Meta Platforms, Inc.   META      Q2 11    30-06-2011   \n",
+       "22  1068  Meta Platforms, Inc.   META      03 11    30-09-2011   \n",
+       "\n",
+       "   FirstFillingDate LatestFillingDate  \n",
+       "0        15-04-2007        15-04-2007  \n",
+       "1        15-07-2007        15-07-2007  \n",
+       "2        15-10-2007        15-10-2007  \n",
+       "3        15-01-2008        15-01-2008  \n",
+       "4        15-01-2008        15-01-2008  \n",
+       "5        15-04-2008        15-04-2008  \n",
+       "6        15-07-2008        15-07-2008  \n",
+       "7        15-10-2008        15-10-2008  \n",
+       "8        15-01-2009        15-01-2009  \n",
+       "9        15-01-2009        15-01-2009  \n",
+       "10       15-04-2009        15-04-2009  \n",
+       "11       15-07-2009        15-07-2009  \n",
+       "12       15-10-2009        15-10-2009  \n",
+       "13       15-01-2010        15-01-2010  \n",
+       "14       15-01-2010        15-01-2010  \n",
+       "15       15-04-2010        15-04-2010  \n",
+       "16       15-07-2010        15-07-2010  \n",
+       "17       15-10-2010        15-10-2010  \n",
+       "18       15-01-2011        15-01-2011  \n",
+       "19       15-01-2011        01-02-2013  \n",
+       "20       15-04-2011        15-04-2011  \n",
+       "21       15-07-2011        15-07-2011  \n",
+       "22       15-10-2011         15-10-201  "
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "data = np.append(text[3:], np.ones(5))\n",
+    "df = pd.DataFrame(np.reshape(data, (24, 6)), columns=['A', 'Ticker', \"PeriodName\", \"PeriodEndDate\", \"FirstFillingDate\", 'LatestFillingDate'])\n",
+    "df = df.iloc[:-2]\n",
+    "df.loc[len(df)] = ['10688 Meta Platforms, Inc.', 'META', '03 11', '30-09-2011', '15-10-2011', '15-10-201']\n",
+    "df[['COID', 'CoName']] = df['A'].str.split(r'\\d\\s', regex=True, expand=True)\n",
+    "df = df[['COID', 'CoName', 'Ticker', 'PeriodName', 'PeriodEndDate', 'FirstFillingDate', 'LatestFillingDate']]\n",
+    "df"
+   ]
   },
   {
    "cell_type": "markdown",
