--- a/Excel-Python Integration_Notes.ipynb
+++ b/Excel-Python Integration_Notes.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "id": "fa911519-8431-4252-8947-75bafba8af7d",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ff1d394b-849c-420a-80e5-971295411ae9",
    "metadata": {},
    "outputs": [],
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "eadc5b3e-a3bb-4ea3-920b-62dcf882ed10",
    "metadata": {},
    "outputs": [],
@@ -168,10 +168,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "43253742-bfb2-4e9a-90b9-07be142b696f",
+   "execution_count": 5,
+   "id": "5249d34f-c815-4764-976c-669073e2e497",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ws.max_column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "beb7fe08-6bcc-46b3-9165-ea70627d1d31",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ws.max_row"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "3469f0b3-e648-449a-b3c2-d9ed0161b102",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(<Cell 'MySheet'.A1>,), (<Cell 'MySheet'.B1>,)]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(ws.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "23b4fb4b-97ba-4b7e-8e7b-1361a844a24e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(ws.columns)[0][0].value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a305a917-cfa3-4239-83fd-b0273969d9b8",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Writing\n",
+    "ws['A2'] = \"World\"\n",
+    "ws['B2'] = \"456\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "43253742-bfb2-4e9a-90b9-07be142b696f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n",
+      "World\n",
+      "123\n",
+      "456\n"
+     ]
+    }
+   ],
    "source": [
     "# Iterate through column and rows\n",
     "for column in ws.columns:\n",
@@ -181,10 +288,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "deb3beb0-35e6-4c2b-819d-d394feff8c22",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n",
+      "123\n",
+      "World\n",
+      "456\n"
+     ]
+    }
+   ],
    "source": [
     "# Iterate through rows and columns\n",
     "for row in ws.rows:\n",
@@ -214,74 +332,6 @@
     "ws_existing = wb[\"MySheet\"]\n",
     "\n",
     "wb.save(\"myfile.xlsx\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "16c3571f-4262-47d1-aadb-fc49fbb121ba",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from openpyxl import load_workbook\n",
-    "from openpyxl.worksheet.datavalidation import DataValidation\n",
-    "from openpyxl.utils import get_column_letter\n",
-    "from openpyxl.styles import Protection\n",
-    "\n",
-    "wb = load_workbook(\"input.xlsx\")\n",
-    "ws = wb.active\n",
-    "\n",
-    "new_cols = [\"Rating\", \"Bonus\", \"Tax\", \"Net Salary\"]\n",
-    "existing_headers = [cell.value for cell in ws[1]]\n",
-    "\n",
-    "# Add new columns only if not present\n",
-    "for col_name in new_cols:\n",
-    "    if col_name not in existing_headers:\n",
-    "        ws.cell(row=1, column=ws.max_column + 1, value=col_name)\n",
-    "\n",
-    "# Refresh header map and prepare col_letter lookup\n",
-    "headers = [cell.value for cell in ws[1]]\n",
-    "col_letters = {name: get_column_letter(idx + 1) for idx, name in enumerate(headers)}\n",
-    "\n",
-    "# Apply data validation for \"Rating\"\n",
-    "rating_col = col_letters[\"Rating\"]\n",
-    "rating_range = f\"{rating_col}2:{rating_col}{ws.max_row}\"\n",
-    "dv = DataValidation(type=\"list\", formula1='\"Excellent,Good,Average,Below Average,Poor\"', allow_blank=False)\n",
-    "dv.prompt = \"Choose a performance rating\"\n",
-    "dv.error = \"Select from the list\"\n",
-    "ws.add_data_validation(dv)\n",
-    "dv.add(rating_range)\n",
-    "\n",
-    "# Add formulas row-wise\n",
-    "for row in range(2, ws.max_row + 1):\n",
-    "    salary = f\"{col_letters['Salary']}{row}\"\n",
-    "    rating = f\"{col_letters['Rating']}{row}\"\n",
-    "    bonus = f\"{col_letters['Bonus']}{row}\"\n",
-    "    tax = f\"{col_letters['Tax']}{row}\"\n",
-    "    net = f\"{col_letters['Net Salary']}{row}\"\n",
-    "\n",
-    "    ws[bonus] =  f'=IF({rating}=\"Excellent\", {salary} * 0.12, IF({rating}=\"Good\", {salary} * 0.1, IF({rating}=\"Average\", {salary} * 0.07, IF({rating}=\"Below Average\", {salary} * 0.05, {salary} * 0.01))))'\n",
-    "    ws[tax] = f\"=({salary}+{bonus})*0.1\"\n",
-    "    ws[net] = f\"={salary}+{bonus}-{tax}\"\n",
-    "\n",
-    "Hide intermediate columns\n",
-    "for col in [\"Bonus\", \"Tax\"]:\n",
-    "    ws.column_dimensions[col_letters[col]].hidden = True\n",
-    "\n",
-    "# Lock all cells except Rating column (hide formulas)\n",
-    "rating_col_idx = headers.index(\"Rating\") + 1\n",
-    "for row in ws.iter_rows(min_row=2):\n",
-    "    for cell in row:\n",
-    "        if cell.column == rating_col_idx:\n",
-    "            cell.protection = Protection(locked=False, hidden=True)\n",
-    "        else:\n",
-    "            cell.protection = Protection(locked=True, hidden=True)\n",
-    "\n",
-    "# Protect worksheet\n",
-    "ws.protection.enable()\n",
-    "ws.protection.set_password(\"yourpassword\")\n",
-    "\n",
-    "wb.save(\"input.xlsx\")\n"
    ]
   },
   {
@@ -442,16 +492,14 @@
   {
    "cell_type": "markdown",
    "id": "6f633075-54e2-45c0-a25e-68ee7cffc464",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "###### Ex. Open or Connect to Excel Workbook"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "4c11331f-3b0e-4ae1-b83c-506d40367932",
    "metadata": {},
    "outputs": [],
@@ -495,10 +543,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "1db3c8b5-bb1e-4c0b-80d3-f67f1fe99c29",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 7)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ws = xw.Book(\"input.xlsx\").sheets[0]\n",
     "rows = ws.used_range.rows.count\n",
@@ -508,10 +567,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "59143fdc-6469-44dd-bb9b-7b731f1d431c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Name', 'Age', 'Salary', 'Rating', 'Bonus', 'Tax', 'Net Salary']\n",
+      "['Jane', 33.0, 50000.0, 'Good', 5000.0, 5500.0, 49500.0]\n",
+      "['Jack', 45.0, 150000.0, 'Average', 10500.000000000002, 16050.0, 144450.0]\n"
+     ]
+    }
+   ],
    "source": [
     "for i in ws.used_range.rows :\n",
     "    print(i.value)"
@@ -519,10 +588,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "423c36d1-73a1-4b3e-81c0-3ac4bfb40372",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Name', 'Jane', 'Jack']\n",
+      "['Age', 33.0, 45.0]\n",
+      "['Salary', 50000.0, 150000.0]\n",
+      "['Rating', 'Good', 'Average']\n",
+      "['Bonus', 5000.0, 10500.000000000002]\n",
+      "['Tax', 5500.0, 16050.0]\n",
+      "['Net Salary', 49500.0, 144450.0]\n"
+     ]
+    }
+   ],
    "source": [
     "for i in ws.used_range.columns :\n",
     "    print(i.value)"
